--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PWA - Guide</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <div class="container">
         <h1>PWA Works</h1>
     </div>
-    <a href="test.html">test file</a>
-<script src="assets/js/script.js" type="text/javascript"></script>
+    <a href="/test.html">test file</a>
+<script src="/assets/js/script.js" type="text/javascript"></script>
 </body>
 </html>
