--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <h1>PWA Works</h1>
     </div>
     <a href="/test.html">test file</a>
-<script src="/assets/js/script.js" type="text/javascript"></script>
+<script src="script.js" type="text/javascript"></script>
 </body>
 </html>
